--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ type: docker
 name: default
 
 steps:
-  - name: build
+  - name: build 3.11
     image: plugins/docker
     settings:
       repo: registry.home.devmem.ru/alpine
@@ -12,3 +12,12 @@ steps:
       dockerfile: ./3.11-cron/Dockerfile
       tags:
         - 3.11-cron
+
+  - name: build 3.13
+    image: plugins/docker
+    settings:
+      repo: registry.home.devmem.ru/alpine
+      registry: registry.home.devmem.ru
+      dockerfile: ./3.13-cron/Dockerfile
+      tags:
+        - 3.13-cron
